fix: don't alternate side in timeline on mobile

--- a/www/styles/_timeline.scss
+++ b/www/styles/_timeline.scss
@@ -1,8 +1,11 @@
 .timeline {
-  --card-width: 14em;
-  --line-offset: -2em;
-  --line-width: 1px;
+  --card-width: calc(100% - var(--line-offset) - var(--circle-diameter));
   --circle-diameter: 2em;
+  --line-offset: 2em;
+  --line-width: 1px;
+  --margin-event: .6em 0 .6em calc(var(--line-offset) + (var(--circle-diameter) / 2));
+    --padding-event: .6em 1.2em;
+
 
   align-items: center;
   box-sizing: border-box;
@@ -10,6 +13,7 @@
   flex-direction: column;
   justify-content: center;
   list-style-type: none;
+  padding: 0;
   position: relative;
 
   &--tmp-page {
@@ -28,11 +32,12 @@
     flex-direction: column;
     flex-grow: 0;
     flex-shrink: 0;
-    margin: var(--margin-timeline-event);
-    padding: var(--padding-timeline-event);
+    margin: var(--margin-event);
+    padding: var(--padding-event);
     position: relative;
     text-decoration: none;
     transition: box-shadow .3s ease, opacity .2s ease;
+    width: var(--card-width);
 
     &--achievement {
       &::after {
@@ -49,19 +54,6 @@
     &--internship {
       &::after {
         content: url('/assets/icons/internship.svg');
-      }
-    }
-
-    &--more {
-      &:first-child {
-        &::before {
-          left: -100% !important; // sass-lint:disable-line no-important
-          width: 200% !important; // sass-lint:disable-line no-important
-        }
-      }
-
-      &::after {
-        content: url('/assets/icons/arrow-left.svg');
       }
     }
 
@@ -82,23 +74,20 @@
       box-shadow: 0 0 8px 0 var(--clr-shadow);
 
       &::after {
-        // background-color: var(--clr-primary-accent);
         border-color: var(--clr-primary-accent);
       }
     }
 
-
     &::after {
-      background-color: var(--clr-background);//var(--clr-primary-gray);
+      background-color: var(--clr-background);
       border: 2px solid var(--clr-primary-black);
       border-radius: var(--circle-diameter);
       box-sizing: border-box;
       color: var(--clr-primary-white);
-      // content: '';
       height: var(--circle-diameter);
       padding: 4px;
       position: absolute;
-      right: calc(var(--line-offset) - 1 * (var(--circle-diameter) / 2));
+      left: calc(-1 * (var(--line-offset) + (var(--circle-diameter) / 2)));
       top: calc(50% - (var(--circle-diameter) / 2));
       transition: all .2s ease;
       width: var(--circle-diameter);
@@ -107,9 +96,9 @@
     &::before {
       background-color: var(--clr-primary-black);
       content: '';
-      height: calc(100% + (2 * var(--margin-timeline-event)));
+      height: calc(100% + (2 * var(--line-offset)));
       position: absolute;
-      right: var(--line-offset);
+      left: calc(-1 * var(--line-offset));
       top: 0;
       width: var(--line-width);
     }
@@ -126,37 +115,12 @@
       }
     }
 
-    margin-left: calc(-1 * (
-        var(--card-width)
-      + (-2 * var(--line-offset))
-      + 1.5em
-      + var(--line-width)
-    ));
-
-    &:nth-child(even) {
-      margin-left: calc(
-          var(--card-width)
-        + (-2 * var(--line-offset))
-        + 1.5em
-      );
-
-      &::after {
-        left: calc(var(--line-offset) - 1 * (var(--circle-diameter) / 2));
-        right: auto;
-      }
-
-      &::before {
-        left: var(--line-offset);
-        right: auto;
-      }
-    }
   }
 
   .timeline__event__details,
   .timeline__event__title {
     flex-direction: column;
     justify-content: center;
-    width: var(--card-width);
   }
 
   .timeline__event__details {
@@ -164,8 +128,8 @@
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 0;
-    margin: var(--margin-timeline-event-details);
-    padding: var(--padding-timeline-event-details);
+    margin: var(--margin-event-details);
+    padding: var(--padding-event-details);
     text-align: left;
   }
 
@@ -175,8 +139,8 @@
     flex-grow: 1;
     flex-shrink: 0;
     font-weight: bold;
-    margin: var(--margin-timeline-event-title);
-    padding: var(--padding-timeline-event-title);
+    margin: var(--margin-event-title);
+    padding: var(--padding-event-title);
     position: relative;
     text-align: left;
   }
@@ -188,20 +152,20 @@
 
   --height-timeline: 460px;
   --margin-timeline: 2em;
-  --margin-timeline-event: 0;
-  --margin-timeline-event-divider: 12px;
+  --margin-event: 0;
+  --margin-event-divider: 12px;
   --padding-timeline: 1.2em;
-  --padding-timeline-event: 0;
-  --padding-timeline-event-content: 0 16px;
-  --margin-timeline-event-details: 0;
-  --padding-timeline-event-details: 0;
-  --margin-timeline-event-title: 0 2em 0 0;
-  --padding-timeline-event-title: 1.2em 2em 1.2em 0;
+  --padding-event: 0;
+  --padding-event-content: 0 16px;
+  --margin-event-details: 0;
+  --padding-event-details: 0;
+  --margin-event-title: 0 2em 0 0;
+  --padding-event-title: 1.2em 2em 1.2em 0;
 
   --margin-timeline: 3em 0;
   --padding-timeline: 0 6% 0 12%;
   --timeline-even-spacebetween: 16px;
-  --timeline-distance-to-line: calc(var(--margin-timeline-event-divider) + (var(--circle-diameter) / 2));
+  --timeline-distance-to-line: calc(var(--margin-event-divider) + (var(--circle-diameter) / 2));
   --margin-timeline-inline-event-details: 0;
   --padding-timeline-inline-event-details: 0 var(--timeline-even-spacebetween);
   --margin-timeline-inline-event-title: 0 0 var(--timeline-distance-to-line);
@@ -260,8 +224,8 @@
     flex-direction: row;
     flex-grow: 0;
     flex-shrink: 0;
-    margin: var(--margin-timeline-event);
-    padding: var(--padding-timeline-event);
+    margin: var(--margin-event);
+    padding: var(--padding-event);
     text-decoration: none;
     transition: opacity .2s ease;
 
@@ -360,8 +324,8 @@
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 0;
-    margin: var(--margin-timeline-event-details);
-    padding: var(--padding-timeline-event-details);
+    margin: var(--margin-event-details);
+    padding: var(--padding-event-details);
     text-align: left;
   }
 
@@ -371,8 +335,8 @@
     flex-grow: 1;
     flex-shrink: 0;
     font-weight: bold;
-    margin: var(--margin-timeline-event-title);
-    padding: var(--padding-timeline-event-title);
+    margin: var(--margin-event-title);
+    padding: var(--padding-event-title);
     position: relative;
     text-align: right;
 
@@ -405,6 +369,10 @@
 
 @media only screen and (min-width: 961px) and (orientation: landscape) {
   .timeline {
+    --card-width: 14em;
+    --margin-event: .8em 0;
+    --padding-event: .4em .8em;
+
     &--dark-bg {
       .timeline__event {
         color: var(--clr-primary-white);
@@ -499,6 +467,46 @@
           width: 100%;
         }
       }
+    }
+
+    .timeline__event {
+      margin-right: calc(-1 * (
+          var(--card-width)
+        + (2 * var(--line-offset))
+        + 1.5em
+        + var(--line-width)
+      ));
+
+      &:nth-child(even) {
+        margin-right: calc(
+            var(--card-width)
+          + (2 * var(--line-offset))
+          + 1.5em
+        );
+
+        &::after {
+          left: auto;
+          right: calc(-1 * (var(--line-offset) + (var(--circle-diameter) / 2)));
+        }
+
+        &::before {
+          left: auto;
+          right: calc(-1 * var(--line-offset));
+        }
+      }
+    }
+
+    .timeline__event__details,
+    .timeline__event__title {
+
+    }
+
+    .timeline__event__details {
+
+    }
+
+    .timeline__event__title {
+
     }
   }
 
