--- a/www/styles/variables/_dimensions.scss
+++ b/www/styles/variables/_dimensions.scss
@@ -73,16 +73,10 @@
   --margin-tags-tag: 4px 4px;
   --padding-tags-hashtag: 0 6px;
   --padding-tags-tag: 0 8px 0 0;
-
-  --margin-timeline-event: 8px;
-  --margin-timeline-event-divider: 12px;
-  --padding-timeline: 1.2em;
-  --padding-timeline-event: .4em .8em;
   --padding-timeline-event-content: 0 16px;
   --margin-timeline-event-details: 0;
   --padding-timeline-event-details: 0;
   --margin-timeline-event-title: 0;
-  // --padding-timeline-event-title: 1.2em 2em 1.2em 0;
   --padding-timeline-event-title: 0;
 }
 
